--- a/style.css
+++ b/style.css
@@ -1,13 +1,236 @@
-body{
-    background-color: #000000;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
+
+*{
+    box-sizing: border-box;
 }
 
+body{
+    margin: 0;
+    padding: 0;
+    font-family: montserrat;
+}
+
+
+.main_section{
+    padding: 0 80px 34px 80px;
+    background-attachment: fixed;
+    background-size: cover;
+    /* background-color: #000000; */
+    background-position: center;
+    height: auto;
+    width: 100%;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/assets/main_bg.jpg');
+}
+
+
+/* .main_bg{
+    width: 100%;
+    height: 900px;
+    height: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+} */
+
+nav{
+    top: 0;
+    position: relative;
+    width: 100%;
+    left: 0;
+    padding: 34px 0px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 100;
+    /* background-color: blue; */
+}
+
+nav::before{
+    content: '';
+    position:absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+
+    z-index: -1;
+}
+
+#check{
+    position: absolute;
+    display: none;
+
+}
+
+.logo a{
+    font-size: 24px;
+    font-weight: 700;
+    text-decoration: none;
+    color: white;
+}
+
+.nav_links{
+   
+    list-style: none;
+    margin: 0;
+    padding: 0;
+
+}
+
+.nav_links li{
+    display:inline-block;
+    margin:0 20px;
+
+}
+
+.nav_links li a{
+    text-decoration: none;
+    color:white;
+    font-family: montserrat;
+    font-size: 18px;
+    font-weight:500;
+
+}
+
+.login_btn{
+    width: 150px;
+    height: 45px;
+    border-radius: 40px;
+    border:0;
+    background-color: #4FFF00;
+    font-size: 18px;
+    color: #000000;
+    font-family: montserrat;
+    font-weight: 700;
+}
+
+.login_btn:hover{
+    -webkit-box-shadow:0px 0px 19px 9px rgba(81,255,0,0.9);
+    -moz-box-shadow: 0px 0px 19px 9px rgba(81,255,0,0.9);
+    box-shadow: 0px 0px 19px 9px rgba(81,255,0,0.9);
+
+}
+
+.icons{
+    position: absolute;
+    font-size:24px ;
+    color: white;
+    cursor: pointer;
+    display: none;
+}
+
+/* BREAKPOINTS */
+@media (max-width: 1003px){
+    /* nav{
+        padding: 34px 50px;
+    } */
+
+    .main_section{
+        padding: 0 70px 34px 70px;
+    }
+
+    .home_header_1 > p{
+        font-size: 60px;
+    }
+
+    .home_header_1{
+        margin-top: 145px;
+    }
+
+    .home_header_2>p{
+        font-size: 14px;
+    }
+}
+
+
+@media (max-width: 945px){
+    .icons{
+        display: inline-flex;
+        right: 0px;
+    }
+
+    #check:checked~ .icons > #menu_icon {
+        display: none;
+    }
+    
+
+    #check:checked~ .icons > #close_icon{
+        display: block;
+    }
+
+
+    .icons #close_icon{
+        display: none;
+    }
+    
+    .nav_links{
+        position:absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        height: 0;
+        background: rgba(0,0,0,0.9);
+        -webkit-backdrop-filter: blur(6px);
+        backdrop-filter: blur(6px);
+        border: 0px solid rgba(0,0,0,0.275);
+        overflow: hidden;
+        transition: .3s ease;
+
+    }
+     
+
+    .login_btn{
+        /* position: absolute; */
+        
+        top:0;
+        left: 0;
+    }
+
+    .nav_links li{
+        display: block;
+        margin: 20px 0;
+        text-align: center;
+
+    }
+
+
+    #check:checked ~ .nav_links {
+        height: 310px; /* or any other color you prefer */
+      }
+
+    .nav_links > a {
+        display: block;
+        font-size: 1.5em;
+        margin: 1.5rem 0;
+        text-align: center;
+    }
+
+
+    
+}
+
+
+@media (max-width: 605px){
+
+    .main_section{
+        padding: 0 50px 14px 50px;
+    }
+
+    .home_header_1{
+        margin-top: 125px;
+    }
+
+    .home_header_1 > p{
+        font-size: 48px;
+    }
+}
+   
 .home_header_1{
     color: white;
     font-weight: 700;
     font-size: 72px;
     max-width: 1040px;
-    margin: 0 80px;
+    margin-top:155px;
 }
 
 .home_header_1 >p{
@@ -20,11 +243,10 @@ body{
 }
 
 .home_header_2{
-    margin: 0 80px;
+    margin-top: 34px;
     color: white;
     font-weight: 400;
     font-size: 18px;
-    padding-top: 40px;
 }
 
 .home_header_2 >p{
@@ -32,9 +254,8 @@ body{
 }
 
 .start_btn{
-    margin:80px;
     color: #000000;
-    font-family: montserrat;;
+    font-family: montserrat;
     height: 57px;
     width: 180px;
     border: none;
@@ -42,6 +263,7 @@ body{
     background-color: #4FFF00;
     font-weight: 700;
     font-size: 18px;
+    margin: 60px 0 241px 0;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -57,13 +279,3 @@ body{
 
 }
 
-
-@media(max-width:825px){
-    .home_header_1{
-        margin: 0 60px;
-        font-size: 60px;
-    }
-    .home_header_2{
-        margin: 0 60px;
-    }
-}
