--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body{
     background-position: center;
     height: auto;
     width: 100%;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/assets/main_bg.jpg');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('main_bg.jpg');
 }
 
 
