--- a/style.css
+++ b/style.css
@@ -13,13 +13,13 @@ body{
 
 .main_section{
     padding: 0 80px 34px 80px;
-    background-attachment: fixed;
+    /* background-attachment: fixed; */
     background-size: cover;
     /* background-color: #000000; */
     background-position: center;
     height: auto;
     width: 100%;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('main_bg.jpg');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/assets/main_bg.jpg');
 }
 
 
@@ -69,6 +69,7 @@ nav::before{
     color: white;
 }
 
+
 .nav_links{
    
     list-style: none;
@@ -83,14 +84,22 @@ nav::before{
 
 }
 
-.nav_links li a{
+.nav_links li a {
     text-decoration: none;
     color:white;
     font-family: montserrat;
     font-size: 18px;
     font-weight:500;
+    border-bottom: 0;   
 
 }
+
+.nav_links li a:hover{
+    border-bottom: 4px solid red;
+    transition: 0.1s ease;
+    border-radius: 4px;
+}
+
 
 .login_btn{
     width: 150px;
@@ -119,7 +128,175 @@ nav::before{
     display: none;
 }
 
+
+   
+.home_header_1{
+    color: white;
+    font-weight: 700;
+    font-size: 72px;
+    max-width: 1040px;
+    margin-top:155px;
+}
+
+.home_header_1 >p{
+    margin: 0;
+    
+}
+
+.home_header_1_yellow{
+    color: #4FFF00;
+}
+
+.home_header_2{
+    margin-top: 34px;
+    color: white;
+    font-weight: 400;
+    font-size: 18px;
+}
+
+.home_header_2 >p{
+    margin: 0;
+}
+
+.start_btn{
+    color: #000000;
+    font-family: montserrat;
+    height: 57px;
+    width: 180px;
+    border: none;
+    border-radius: 40px;
+    background-color: #4FFF00;
+    font-weight: 700;
+    font-size: 18px;
+    margin: 60px 0 241px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    -webkit-box-shadow:0px 0px 55px 0px rgba(81,255,0,0.58);
+    -moz-box-shadow: 0px 0px 55px 0px rgba(81,255,0,0.58);
+    box-shadow: 0px 0px 55px 0px rgba(81,255,0,0.58);
+
+
+}
+
+#st_btn{
+    font-size: 24px;
+
+}
+
+
+/* -------------Second Page Styles------------- */
+
+
+
+.second_page{
+    padding: 0 80px 0 80px;
+    height: auto;
+    width: 100%;
+    background-image: url(/assets/haikei\ 3.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    /* background-attachment: fixed; */
+}
+
+
+.double_image{
+    /* padding-top: 193px; */
+    /* background-color: black; */
+    flex: 1 0 475px;
+    width: 475px;
+    height: 600px;
+
+}
+
+.contain{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.first_image{
+    position: absolute;
+    border-radius: 16px;
+    height: 345px;
+    width: 345px;
+    background-image: url(/assets/man1.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    -webkit-box-shadow: 6px 6px 16px 0px rgba(0,0,0,0.62);
+    -moz-box-shadow: 6px 6px 16px 0px rgba(0,0,0,0.62);
+    box-shadow: 6px 6px 16px 0px rgba(0,0,0,0.62);
+
+}
+
+.second_image{
+    position: relative;
+    border-radius: 16px;
+    height: 345px;
+    width: 345px;
+    background-image: url(/assets/man2.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: red;
+    transform: translate(172px ,172px);
+    -webkit-box-shadow: 6px 6px 16px 0px rgba(0,0,0,0.62);
+    -moz-box-shadow: 6px 6px 16px 0px rgba(0,0,0,0.62);
+    box-shadow: 6px 6px 16px 0px rgba(0,0,0,0.62);
+    
+
+}
+
+
+
+.second_page_header_1{
+    display: grid;
+    justify-content: end;
+    text-align: center;
+    font-size: 72px;
+    font-weight: 700 ;
+    margin: 0;
+    padding-top: 70px;
+    /* padding-right: 20px; */
+}
+
+.login_form{
+    /* min-width: 300px; */
+    margin-top: 50px;
+    border-radius: 16px;
+    height: 563px;
+    width: 422px;
+    background-color: #441818;
+    box-shadow: 6px 6px 16px 0px rgba(0,0,0,0.62);
+
+
+}
+
+
+
+
 /* BREAKPOINTS */
+
+@media (max-width: 1120px){
+    .second_page{
+        padding: 0 60px;
+    }
+
+    .first_image{
+        height: 325px;
+        width: 325px;
+    }
+
+    .second_image{
+        height: 305px;
+        width: 305px;
+    }
+
+}
+
+
 @media (max-width: 1003px){
     /* nav{
         padding: 34px 50px;
@@ -140,6 +317,35 @@ nav::before{
     .home_header_2>p{
         font-size: 14px;
     }
+
+    .second_page_header_1{
+        font-size: 60px;
+        justify-content: center;
+        padding-bottom: 50px;
+    }
+
+    .contain{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    
+    /* .second_page{
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+    } */
+
+    .double_image{
+        justify-content: center;
+    
+    }
+
+    /* .login_form{
+        position: relative;
+        transform: translateX(50%);
+    } */
 }
 
 
@@ -223,59 +429,36 @@ nav::before{
     .home_header_1 > p{
         font-size: 48px;
     }
-}
-   
-.home_header_1{
-    color: white;
-    font-weight: 700;
-    font-size: 72px;
-    max-width: 1040px;
-    margin-top:155px;
-}
 
-.home_header_1 >p{
-    margin: 0;
-    
-}
+    .second_page{
+        padding: 0 40px;
+    }
 
-.home_header_1_yellow{
-    color: #4FFF00;
-}
+    .first_image{
+        height: 165px;
+        width: 165px;
+    }
 
-.home_header_2{
-    margin-top: 34px;
-    color: white;
-    font-weight: 400;
-    font-size: 18px;
-}
+    .second_image{
+        height: 145px;
+        width: 145px;
+        transform: translate(85px,85px);
+    }
 
-.home_header_2 >p{
-    margin: 0;
-}
+    .login_form{
+        /* min-width: 300px; */
+        height: 403px;
+        width: 245px;
+        margin-right: 60px;
 
-.start_btn{
-    color: #000000;
-    font-family: montserrat;
-    height: 57px;
-    width: 180px;
-    border: none;
-    border-radius: 40px;
-    background-color: #4FFF00;
-    font-weight: 700;
-    font-size: 18px;
-    margin: 60px 0 241px 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    -webkit-box-shadow:0px 0px 55px 0px rgba(81,255,0,0.58);
-    -moz-box-shadow: 0px 0px 55px 0px rgba(81,255,0,0.58);
-    box-shadow: 0px 0px 55px 0px rgba(81,255,0,0.58);
+    } 
+    .double_image{
+        width: 290px;
+        flex-basis: 300px;
+    }
 
+    .contain{
+        padding:20px ;
+    }
 
 }
-
-#st_btn{
-    font-size: 24px;
-
-}
-
