--- a/style.css
+++ b/style.css
@@ -190,7 +190,7 @@ nav::before{
 
 
 .second_page{
-    padding: 0 80px 0 80px;
+    padding: 0 80px 80px 80px;
     height: auto;
     width: 100%;
     background-image: url(/assets/haikei\ 3.png);
@@ -341,6 +341,93 @@ form > input::placeholder{
 .form_btn:hover{
     background-color: #ff4800;
 }
+
+
+/* -------------Third Page Styles---------------- */
+
+
+.third_page{
+    padding: 0 80px 0px 80px;
+}
+
+
+
+.third_page_header_1{
+    text-align: center;
+    font-size: 72px;
+
+}
+
+.third_container{
+    /* background-color:blue;
+    border: 11px solid rgb(2, 17, 3); */
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    margin:80px 0;
+}
+
+.box1{
+    flex: 0 0 305px;
+    margin-bottom: 40px;
+    height: 370px;
+    width: 305px;
+    /* height: 370px; */
+    background-color: #fafafa;
+    border-radius: 16px;
+    box-shadow: 6px 6px 16px 0px rgba(0,0,0,0.62);
+    text-align: center;
+    font-weight: medium;
+
+}
+.box2{
+    flex: 0 0 305px;
+    margin-bottom: 40px;
+    height: 370px;
+    width: 305px;
+    /* height: 370px; */
+    background-color: #fafafa;
+    border-radius: 16px;
+    box-shadow: 6px 6px 16px 0px rgba(0,0,0,0.62);
+    text-align: center;
+
+}
+.box3{
+    flex: 0 0 305px;
+    margin-bottom: 40px;
+    height: 370px;
+    width: 305px;
+    /* height: 370px; */
+    background-color:#fafafa;
+    border-radius: 16px;
+    box-shadow: 6px 6px 16px 0px rgba(0,0,0,0.62);
+    text-align: center;
+
+    
+}
+
+.box_header{
+    font-size: 36px;
+    font-weight: 500;
+}
+
+.box_image{
+    height: 129px;
+    width: 119px;
+}
+
+.box_text{
+    font-size: 18px;
+    font-weight: 400;
+    text-align: left;
+    padding: 0 12px;
+
+}
+
+
+
+
+
 
 
 /* BREAKPOINTS */
@@ -513,8 +600,8 @@ form > input::placeholder{
 
     .login_form{
         /* min-width: 300px; */
-        height: 403px;
-        width: 250px;
+        height: 400px;
+        width: 270px;
         margin-right: 60px;
 
     } 
@@ -572,7 +659,11 @@ form > input::placeholder{
 
     }
 
-
+    .third_page_header_1{
+        font-size: 48px;
+    }
 
     
 }
+
+
