--- a/style.css
+++ b/style.css
@@ -432,10 +432,11 @@ form > input::placeholder{
 
 .fourth_page{
     background-color: #000000;
-    padding: 0 80px 34px 80px;
+    padding: 34px 80px 34px 80px;
 }
 
 .fourth_page_header_1{
+
     font-size: 72px;
     font-weight: 700px;
     color: white;
@@ -518,6 +519,73 @@ table td{
 
 
 
+/* ----------------Contact Us Styles------------------ */
+
+.contact_page{
+    background-color: #000000;
+    padding: 34px 80px;
+}
+
+.contact_page_header_1{
+    color: white;
+    font-size: 72px;
+    font-weight: 700px;
+    text-align: center;
+}
+
+.contact_info{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.contact_image{
+    width: 197px;
+    height: 197px;
+    background-image: url(/assets/contact\ image.png);
+    border-radius: 16px;
+    box-shadow: 0px 0px 29px 0px rgba(250,250,250,0.61);
+}
+
+.links_header{
+    font-size: 24px;
+    text-decoration: underline;
+    color: white;
+}
+
+.social_links{
+    color: white;
+
+}
+
+
+
+.social_links a{
+    font-size: 18px;
+    margin-left: 10px;
+    color: white;
+    text-decoration: none;
+}
+.address a{
+    font-size: 18px;
+    margin-left: 8px;
+    color: white;
+    text-decoration: none;
+}
+
+
+.contact_no{
+    color: white;
+}
+
+.contact_no a{
+    font-size: 18px;
+    margin-left: 8px;
+    color: white;
+    text-decoration: none;
+
+}
+
 
 
 
@@ -539,10 +607,15 @@ table td{
     }
 
     .fourth_page{
-        padding: 0 60px;
+        padding: 24px 60px;
     }
 
+    .contact_page{
+        padding: 24px 60px ;
+    }
 }
+
+
 
 
 @media (max-width: 1003px){
@@ -600,6 +673,10 @@ table td{
 
     .fourth_page_footer{
         font-size: 20px;
+    }
+
+    .contact_page_header_1{
+        font-size: 60px;
     }
 
     /* .login_form{
@@ -684,8 +761,27 @@ table td{
         font-size: 24px;
     }
 
+    .contact_image{
+        width: 187px;
+        height: 187px;
+    }
 
+    .links_header{
+        font-size: 20px;
+    }
+
+    .social_links a{
+        font-size: 14px;
+    }
+
+    .address a{
+        font-size: 14px;
+    }
     
+    .contact_no a{
+        font-size: 14px;
+
+    }
 }
 
 
@@ -818,7 +914,7 @@ table td{
     }
     
     .fourth_page{
-        padding: 0 40px;
+        padding: 14px 40px;
     }
 
     .fourth_page_header_1{
@@ -843,7 +939,20 @@ table td{
     }
 
     .fourth_page_footer{
-        font-size: 18px;
+        font-size: 14px;
+    }
+
+    .contact_page{
+        padding: 14px 40px;
+    }
+
+    .contact_page_header_1{
+        font-size: 48px;
+    }
+
+    .contact_image{
+        width: 165px;
+        height: 165px;
     }
 }
 
