--- a/style.css
+++ b/style.css
@@ -118,6 +118,7 @@ nav::before{
     -webkit-box-shadow:0px 0px 19px 9px rgba(81,255,0,0.9);
     -moz-box-shadow: 0px 0px 19px 9px rgba(81,255,0,0.9);
     box-shadow: 0px 0px 19px 9px rgba(81,255,0,0.9);
+    transition-duration: 0.3s;
 
 }
 
@@ -173,15 +174,21 @@ nav::before{
     display: flex;
     align-items: center;
     justify-content: center;
-    -webkit-box-shadow:0px 0px 55px 0px rgba(81,255,0,0.58);
-    -moz-box-shadow: 0px 0px 55px 0px rgba(81,255,0,0.58);
-    box-shadow: 0px 0px 55px 0px rgba(81,255,0,0.58);
+    /* -webkit-box-shadow:0px 0px 55px 0px rgba(81,255,0,0.58); */
+    /* -moz-box-shadow: 0px 0px 55px 0px rgba(81,255,0,0.58); */
+    box-shadow: 0px 0px 55px 0px rgba(81,255,0,0.28);
 
 
 }
 
 #st_btn{
     font-size: 24px;
+
+}
+
+.start_btn:hover{
+    box-shadow: 0px 0px 19px 9px rgba(81,255,0,0.9);
+    transition-duration: 0.3s;
 
 }
 
@@ -293,25 +300,31 @@ form > label{
 
 
 form > input{
+    padding-left: 20px;
     margin:28px 0;
     width: 300px;
     height: 56px;
     border-radius: 16px;
-    border: 0;
+    border: 2px solid white;
     background-color: #d9d9d9;
     outline: none;
+    color: #000000;
+    font-size: 18px;
     
 }
 
 form >input:hover{
     border: 2px solid;
     border-color: #ff4800;
+    /* transition-duration: 0.3s; */
+    transition: ease 0.5s;
 
 }
 
 form > input::placeholder{
     font-family: montserrat;
-    padding: 20px;
+    font-size: 14px;
+    /* padding: 20px; */
 
 
 }
@@ -340,7 +353,10 @@ form > input::placeholder{
 }
 
 .form_btn:hover{
-    background-color: #ff4800;
+
+    color: #4FFF00;
+    background-color: #000000;
+    transition-duration:0.3s;
 }
 
 
@@ -403,9 +419,11 @@ form > input::placeholder{
     border-radius: 16px;
     box-shadow: 6px 6px 16px 0px rgba(0,0,0,0.62);
     text-align: center;
-
+    
     
 }
+
+
 
 .box_header{
     font-size: 36px;
@@ -565,7 +583,14 @@ table td{
     margin-left: 10px;
     color: white;
     text-decoration: none;
+    border:2px solid black ;
 }
+
+.social_links a:hover{
+    border-bottom: 2px solid #4FFF00;
+    transition: 0.3s;
+}
+
 .address a{
     font-size: 18px;
     margin-left: 8px;
@@ -604,8 +629,22 @@ table td{
     text-decoration: none;
     font-size: 18px;
     font-weight: 400;
+    border: 2px solid black;
+    
 }
 
+.site_links li a:hover{
+    border-bottom: 2px solid #4FFF00;
+    transition: 0.3s;
+}
+
+footer{
+    color: white;
+    text-align: center;
+    background-color: black;
+    font-size: 12px;
+    padding: 10px 0 ;
+}
 
 /* BREAKPOINTS */
 
