--- a/style.css
+++ b/style.css
@@ -12,15 +12,12 @@ body{
     margin: 0;
     padding: 0;
     font-family: montserrat;
-    /* min-width: 383px; */
 }
 
 
 .main_section{
     padding: 0 80px 34px 80px;
-    /* background-attachment: fixed; */
     background-size: cover;
-    /* background-color: #000000; */
     background-position: center;
     height: auto;
     width: 100%;
@@ -28,14 +25,6 @@ body{
 }
 
 
-/* .main_bg{
-    width: 100%;
-    height: 900px;
-    height: auto;
-    position: absolute;
-    top: 0;
-    left: 0;
-} */
 
 nav{
     top: 0;
@@ -47,7 +36,7 @@ nav{
     justify-content: space-between;
     align-items: center;
     z-index: 100;
-    /* background-color: blue; */
+
 }
 
 nav::before{
@@ -119,8 +108,6 @@ nav::before{
 }
 
 .login_btn:hover{
-    -webkit-box-shadow:0px 0px 19px 9px rgba(81,255,0,0.9);
-    -moz-box-shadow: 0px 0px 19px 9px rgba(81,255,0,0.9);
     box-shadow: 0px 0px 19px 9px rgba(81,255,0,0.9);
     transition-duration: 0.3s;
 
@@ -178,8 +165,6 @@ nav::before{
     display: flex;
     align-items: center;
     justify-content: center;
-    /* -webkit-box-shadow:0px 0px 55px 0px rgba(81,255,0,0.58); */
-    /* -moz-box-shadow: 0px 0px 55px 0px rgba(81,255,0,0.58); */
     box-shadow: 0px 0px 55px 0px rgba(81,255,0,0.28);
 
 
@@ -196,6 +181,10 @@ nav::before{
 
 }
 
+.start{
+    text-decoration: none;
+}
+
 
 /* -------------Second Page Styles------------- */
 
@@ -208,14 +197,11 @@ nav::before{
     background-image: url(/assets/haikei\ 4.png);
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
-    /* background-attachment: fixed; */
+
 }
 
 
 .double_image{
-    /* padding-top: 193px; */
-    /* background-color: black; */
     flex: 1 0 475px;
     width: 475px;
     height: 600px;
@@ -237,8 +223,6 @@ nav::before{
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    -webkit-box-shadow: 6px 6px 16px 0px rgba(0,0,0,0.62);
-    -moz-box-shadow: 6px 6px 16px 0px rgba(0,0,0,0.62);
     box-shadow: 6px 6px 16px 0px rgba(0,0,0,0.62);
 
 }
@@ -252,10 +236,7 @@ nav::before{
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    background-color: red;
     transform: translate(172px ,172px);
-    -webkit-box-shadow: 6px 6px 16px 0px rgba(0,0,0,0.62);
-    -moz-box-shadow: 6px 6px 16px 0px rgba(0,0,0,0.62);
     box-shadow: 6px 6px 16px 0px rgba(0,0,0,0.62);
     
 
@@ -271,11 +252,9 @@ nav::before{
     font-weight: 700 ;
     margin: 0;
     padding-top: 70px;
-    /* padding-right: 20px; */
 }
 
 .login_form{
-    /* min-width: 300px; */
     margin-top: 50px;
     border-radius: 16px;
     height: 563px;
@@ -320,7 +299,6 @@ form > input{
 form >input:hover{
     border: 2px solid;
     border-color: #ff4800;
-    /* transition-duration: 0.3s; */
     transition: ease 0.5s;
 
 }
@@ -328,7 +306,6 @@ form >input:hover{
 form > input::placeholder{
     font-family: montserrat;
     font-size: 14px;
-    /* padding: 20px; */
 
 
 }
@@ -380,8 +357,6 @@ form > input::placeholder{
 }
 
 .third_container{
-    /* background-color:blue;
-    border: 11px solid rgb(2, 17, 3); */
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
@@ -389,11 +364,9 @@ form > input::placeholder{
 }
 
 .box1{
-    /* flex: 0 0 305px; */
     margin-bottom: 40px;
     height: 370px;
     width: 305px;
-    /* height: 370px; */
     background-color: #fafafa;
     border-radius: 16px;
     box-shadow: 6px 6px 16px 0px rgba(0,0,0,0.62);
@@ -402,11 +375,9 @@ form > input::placeholder{
 
 }
 .box2{
-    /* flex: 0 0 305px; */
     margin-bottom: 40px;
     height: 370px;
     width: 305px;
-    /* height: 370px; */
     background-color: #fafafa;
     border-radius: 16px;
     box-shadow: 6px 6px 16px 0px rgba(0,0,0,0.62);
@@ -414,11 +385,9 @@ form > input::placeholder{
 
 }
 .box3{
-    /* flex: 0 0 305px ; */
     margin-bottom: 40px;
     height: 370px;
     width: 305px;
-    /* height: 370px; */
     background-color:#fafafa;
     border-radius: 16px;
     box-shadow: 6px 6px 16px 0px rgba(0,0,0,0.62);
@@ -504,7 +473,7 @@ table th{
 }
 
 table td{
-    /* background-color:rgba(79, 255, 0, 0.25) ; */
+
     color:#000000;
     font-size: 20px;
     font-weight: 500;
@@ -713,11 +682,7 @@ footer{
     }
 
     
-    /* .second_page{
-        display:flex;
-        flex-direction: column;
-        align-items: center;
-    } */
+
 
     .double_image{
         justify-content: center;
@@ -740,10 +705,7 @@ footer{
         font-size: 60px;
     }
 
-    /* .login_form{
-        position: relative;
-        transform: translateX(50%);
-    } */
+
 }
 
 
@@ -784,7 +746,7 @@ footer{
      
 
     .login_btn{
-        /* position: absolute; */
+  
         
         top:0;
         left: 0;
@@ -799,7 +761,7 @@ footer{
 
 
     #check:checked ~ .nav_links {
-        height: 310px; /* or any other color you prefer */
+        height: 310px; 
       }
 
     .nav_links > a {
@@ -880,14 +842,14 @@ footer{
     }
 
     .login_form{
-        /* min-width: 300px; */
+
         height: 400px;
         width: 250px;
-        /* margin-right: 60px; */
+
 
     } 
     .double_image{
-        /* width: 290px; */
+
         width: 227px;
         flex-basis: 300px;
     }
