--- a/style2.css
+++ b/style2.css
@@ -28,7 +28,7 @@ body {
 
 .letter {
   width: 90%;
-  height: 90vh;
+  height: 95%;
   background-color: black;
   border-radius: 20px;
   background: rgba(255,255,255,0.4);
